src/objects/REVVY__MnQuote__c.object
<CustomObject>
    <fields>
        <fullName>OCD_IA_API_Reagent_Volume__c</fullName>
        <defaultValue>0</defaultValue>
        <description>IA Reagent Volume Increase</description>
        <label>IA Reagent Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_IA_API__c</fullName>
        <description>API for IA</description>
        <inlineHelpText>API for IA</inlineHelpText>
        <label>IA Reagents Quote</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_IA_Accessories_Discount__c</fullName>
        <label>IA Accessories Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_IA_Cardiac_Disc_CCMS__c</fullName>
        <formula>(  1 -  OCD_IA_Volume_Disc__c  ) * OCD_Cardiac_Disc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IA Cardiac Disc CCMS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_IA_Consumable_Discount__c</fullName>
        <label>IA Consumable Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_IA_Equipment_Discount__c</fullName>
        <label>IA Equipment Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_IA_IA_Assay_Count_CCMS__c</fullName>
        <formula>( 1 - OCD_IA_Volume_Disc__c ) *  IA_Assay_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IA IA Assay Count CCMS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_IA_Label__c</fullName>
        <label>IA</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_IA_Max_Discount__c</fullName>
        <label>IA Max Discount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_IA_Max_Volume_Disc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IA Max Volume Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_IA_MultiFamily_Disc_CCMS__c</fullName>
        <formula>( 1 - OCD_IA_Volume_Disc__c ) *  OCD_MultiFamily_Disc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IA MultiFamily Disc CCMS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_IA_Other_Discount__c</fullName>
        <label>IA Other Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_IA_Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IA Price Plan</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3 AND 4) OR 5</booleanFilter>
            <errorMessage>Invalid IA Price Plan. Please select valid IA Price Plan</errorMessage>
            <filterItems>
                <field>REVVY__MnPriceList__c.LOB__c</field>
                <operation>equals</operation>
                <value>IA</value>
            </filterItems>
            <filterItems>
                <field>REVVY__MnPriceList__c.Is_Valid__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>REVVY__MnPriceList__c.Country_applicability__c</field>
                <operation>equals</operation>
                <valueField>$Source.OCD_Billing_ISO_Country_Code__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.REVVY__Status__c</field>
                <operation>equals</operation>
                <value>Cloning in progress..., Creating lines in progress..., Draft, Draft in progress..., Importing Quote Lines, Ready, Submitted, IDN_Completed, IDN_Error</value>
            </filterItems>
            <filterItems>
                <field>$Source.REVVY__Status__c</field>
                <operation>equals</operation>
                <value>Ordered</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>REVVY__MnPriceList__c</referenceTo>
        <relationshipLabel>Revvy Quotes (IA Price Plan)</relationshipLabel>
        <relationshipName>IA_Price_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OCD_IA_Price_Plan_Id__c</fullName>
        <formula>OCD_IA_Price_List__r.Id</formula>
        <label>IA Price Plan Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_IA_Reagent_Qty__c</fullName>
        <label>IA Reagent Qty</label>
        <summarizedField>REVVY__MnQuoteItem__c.REVVY__Quantity__c</summarizedField>
        <summaryForeignKey>REVVY__MnQuoteItem__c.REVVY__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OCD_IA_Service_Discount__c</fullName>
        <label>IA Service Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_IA_Term_Disc_CCMS__c</fullName>
        <formula>( 1 - OCD_IA_Volume_Disc__c ) *   OCD_Term_Disc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IA Term Disc CCMS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_IA_Volume_Disc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IA Volume Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_IA_Volume_Discount_Id__c</fullName>
        <formula>OCD_IA_Price_List__r.Discount__r.Id</formula>
        <label>IA Volume Discount Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_IDN_Site_Commitment_Disc__c</fullName>
        <label>IDN Site Commitment Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_IDN_Sites__c</fullName>
        <label>Number of Participating Sites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Integration_Completed_Contract__c</fullName>
        <description>Informatica will set this when Quote is imported into CCMS</description>
        <label>Integration Completed DateTime - Contrac</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OCD_Integration_Completed_DateTime__c</fullName>
        <label>Integration Completed DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OCD_Integration_Extracted_Contract__c</fullName>
        <description>Informatica will set this when Quote is extracted from CPQ</description>
        <label>Integration Submit DateTime - Contract</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OCD_Integration_Message__c</fullName>
        <description>Capture errors during data extraction from CPQ to Import into CCMS</description>
        <label>Integration Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OCD_Integration_Status_Contract__c</fullName>
        <description>Default in CPQ &quot;Quote in progress&quot; in CPQ
1b. Ready for extraction --&gt; Quote accepted by customer
2a. CCMS - Extracted --&gt; Informatica completed extracting details
3a. CCMS - Completed --&gt; Quote information loaded in CCMS</description>
        <label>Integration Status - Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_Integration_Status_Reporting__c</fullName>
        <description>Default in CPQ – to be decided
2b. GDW - Extracted --&gt; Informatica completed extracting details
3b. GDW - Completed --&gt; Quote information loaded in CCMS</description>
        <label>Integration Status - Reporting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_Integration_Status__c</fullName>
        <label>Integration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OCD_Integration_Submit_DateTime__c</fullName>
        <label>Integration Submit DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OCD_LR_Accessories__c</fullName>
        <label>Accessories</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_LR_Consumables__c</fullName>
        <label>Lease/Rental Consumables</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_LR_Equipment__c</fullName>
        <label>Equipment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_LR_Interest_Rate_Acc__c</fullName>
        <label>Lease/Rental Interest Factor Accessories</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_LR_Interest_Rate__c</fullName>
        <label>Lease/Rental Interest Factor Equiipment</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_LR_Others__c</fullName>
        <label>Others</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_LR_Reagents__c</fullName>
        <label>Lease/Rental Reagents</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_LR_Services__c</fullName>
        <label>Services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_MS_Accessories__c</fullName>
        <label>MS Accessories</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_MS_Consumables__c</fullName>
        <label>MS Consumables</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_MS_Equipment__c</fullName>
        <description>Monthly Payment for Equipment</description>
        <label>MS Equipment Monthly Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_MS_Others__c</fullName>
        <label>MS Others</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_MS_Reagents__c</fullName>
        <label>MS Reagents</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_MS_Services__c</fullName>
        <label>MS Services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Managed_Services_Fee__c</fullName>
        <label>Managed Services Fee</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Manual_Discount__c</fullName>
        <label>Strategic Discount</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Market_Condition_Discount__c</fullName>
        <description>Strategic Discount (Market conditions) for Canada IH</description>
        <label>Canada Market Condition Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Market_Condition_Max_Discount__c</fullName>
        <description>Strategic Discount (Market conditions) max discount for Canada IH</description>
        <label>Canada Market Condition Max Disc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Market_Condition_Min_Discount__c</fullName>
        <description>Strategic Discount (Market conditions) min discount for  Canada IH</description>
        <label>Canada Market Condition Min Disc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Max_Beh_Discount__c</fullName>
        <label>Max Beh Discount</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Max_Vol_Discount__c</fullName>
        <label>Max Volume Discount</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Max_Warranty_on_Quote__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the maximum of the number of months of Warranty for any equipment on the quote.</description>
        <inlineHelpText>This is the maximum of the number of months of Warranty for any equipment on the quote.</inlineHelpText>
        <label>Warranty on Quote</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Menu_Disc__c</fullName>
        <label>Menu Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Menu_Max_Disc__c</fullName>
        <label>Menu Max Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Menu_Min_Disc__c</fullName>
        <label>Menu Min Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Min_Beh_Discount__c</fullName>
        <label>Min Beh Discount</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Min_Vol_Discount__c</fullName>
        <label>Min Volume Discount</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_MultiFamily_Disc__c</fullName>
        <label>MultiFamily Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_MultiFamily_Max_Disc__c</fullName>
        <label>MultiFamily Max Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_MultiFamily_Min_Disc__c</fullName>
        <label>MultiFamily Min Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Ortho_AntiSera_Tube_Disc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ortho AntiSera Tube</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Ortho_Quality_Control__c</fullName>
        <description>Parameter to determine the QC Control Calculation formula to be used</description>
        <label>Ortho Quality Control</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only on Calibration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only on Startup</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OCD_Parent_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Quote</label>
        <referenceTo>REVVY__MnQuote__c</referenceTo>
        <relationshipLabel>IDN Member Quotes</relationshipLabel>
        <relationshipName>Parent_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OCD_Pricing_Subtype__c</fullName>
        <label>Pricing</label>
        <picklist>
            <picklistValues>
                <fullName>Price Protected</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>API Applied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OCD_Probability_at_Creation__c</fullName>
        <label>Probability at Creation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Quote_Type__c</fullName>
        <inlineHelpText>Purchase, Lease, Monthly Payment, CPRR, CPT, Reagent Rental, Managed Service</inlineHelpText>
        <label>Quote Type</label>
        <picklist>
            <picklistValues>
                <fullName>Purchase</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPRR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reagent Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDN Member</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OCD_Red_Blood_Cells__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Red Blood Cells</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Service_API__c</fullName>
        <defaultValue>0</defaultValue>
        <description>API for Service</description>
        <inlineHelpText>API for Service</inlineHelpText>
        <label>Service API</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Site_Index__c</fullName>
        <label>Site Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Slides_Disc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Slides</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Stage_at_Creation__c</fullName>
        <label>Stage at Creation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_Standard_Equipment_Warranty__c</fullName>
        <defaultValue>12</defaultValue>
        <description>This is the minimum of the &quot;Equipment Warranty(months)&quot; from the two Price Plans selected.</description>
        <inlineHelpText>This is the standard equipment warranty based on the price plans selected. If number of months of warranty greater than this value is assigned then approval will be needed.</inlineHelpText>
        <label>Standard Equipment Warranty</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Term_Disc__c</fullName>
        <label>Term Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Term_Max_Disc__c</fullName>
        <description>Max Term Discount</description>
        <label>Term Max Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Term_Min_Disc__c</fullName>
        <description>Min Term Disc</description>
        <label>Term Min Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Term_Months__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Term(Months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Tips_Disc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tips</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Total_Annual_Patient_Volume_CC__c</fullName>
        <description>Total Annual Patient Volume for CC Reagents</description>
        <label>Total Annual Patient Volume - CC</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Total_Annual_Patient_Volume_IA__c</fullName>
        <description>Total Annual Patient Volume for IA Reagents</description>
        <label>Total Annual Patient Volume - IA</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Total_Annual_Patient_Volume__c</fullName>
        <label>Total Annual Patient Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Total_Annual_Revenue_CAT__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Annual Revenue - CAT</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Total_Annual_Revenue_CC__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Annual Revenue - CC</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Total_Annual_Revenue_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Annual Revenue - IA</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Total_Annual_Revenue_Other__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Annual Revenue - Other</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Total_Annual_Revenue_Trad_IH__c</fullName>
        <label>Total Annual Revenue - TradIH</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Total_Annual_Usage_Volume_All__c</fullName>
        <label>Total Usage Volume</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Total_Annual_Usage_Volume_CAT__c</fullName>
        <label>Total Annual Usage Volume - CAT</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Total_Annual_Usage_Volume_CC__c</fullName>
        <label>Total Annual Usage Volume - CC</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Total_Annual_Usage_Volume_IA__c</fullName>
        <label>Total Annual Usage Volume - IA</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Total_Annual_Usage_Volume_Trad_IH__c</fullName>
        <label>Total Annual Usage Volume - TradIH</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_TradIH_Accessories_Discount__c</fullName>
        <label>TradIH Accessories Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_TradIH_Consumable_Discount__c</fullName>
        <label>TradIH Consumable Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_TradIH_Equipment_Discount__c</fullName>
        <label>TradIH Equipment Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_TradIH_Max_Discount__c</fullName>
        <label>TradIH Max Discount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_TradIH_Max_RBC_Volume_Disc__c</fullName>
        <label>Canada TradIH Max RBC Volume Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_TradIH_Max_Trad_Antisera_Volume_Disc__c</fullName>
        <label>Canada TradIH Max Trad/Antisera Vol Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_TradIH_Max_Volume_Disc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TradIH Max Volume Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_TradIH_Min_RBC_Volume_Disc__c</fullName>
        <label>Canada TradIH Min RBC Volume Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_TradIH_Min_Trad_Antisera_Volume_Disc__c</fullName>
        <label>Canada TradIH Min Trad/Antisera Vol Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_TradIH_Min_Volume_Disc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TradIH Min Volume Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_TradIH_Other_Discount__c</fullName>
        <label>TradIH Other Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_TradIH_Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trad IH Price Plan</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3 AND 4) OR 5</booleanFilter>
            <errorMessage>Invalid Trad IH Price Plan. Please select valid Trad IH Price Plan.</errorMessage>
            <filterItems>
                <field>REVVY__MnPriceList__c.Is_Valid__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>REVVY__MnPriceList__c.Country_applicability__c</field>
                <operation>equals</operation>
                <valueField>$Source.OCD_Billing_ISO_Country_Code__c</valueField>
            </filterItems>
            <filterItems>
                <field>REVVY__MnPriceList__c.LOB__c</field>
                <operation>equals</operation>
                <value>Trad IH</value>
            </filterItems>
            <filterItems>
                <field>$Source.REVVY__Status__c</field>
                <operation>equals</operation>
                <value>Cloning in progress..., Creating lines in progress..., Draft, Draft in progress..., Importing Quote Lines, Ready, Submitted, IDN_Completed, IDN_Error</value>
            </filterItems>
            <filterItems>
                <field>$Source.REVVY__Status__c</field>
                <operation>equals</operation>
                <value>Ordered</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>REVVY__MnPriceList__c</referenceTo>
        <relationshipLabel>Revvy Quotes (Trad IH Price Plan)</relationshipLabel>
        <relationshipName>TradIH_Price_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OCD_TradIH_RBC_Volume_Disc__c</fullName>
        <label>Canada TradIH RBC Volume Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_TradIH_Service_Discount__c</fullName>
        <label>TradIH Service Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_TradIH_Term_Disc_CCMS__c</fullName>
        <formula>(1 - (  OCD_TradIH_Volume_Disc__c + OCD_Menu_Disc__c + OCD_MultiFamily_Disc__c ))  *  OCD_Term_Disc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TradIH Term Disc CCMS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_TradIH_Trad_Antisera_Volume_Disc__c</fullName>
        <label>Canada TradIH Trad/Antisera Vol Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_TradIH_Volume_Disc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TradIH Volume Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Trad_IH_API_Max__c</fullName>
        <label>Trad IH Reagents Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Trad_IH_API_Min__c</fullName>
        <label>Trad IH Reagents Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Trad_IH_API_Reagent_Volume__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Trad IH Reagent Volume API Increase</description>
        <label>Trad IH Reagent Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Trad_IH_API__c</fullName>
        <description>API for Trad IH</description>
        <inlineHelpText>API for Trad IH</inlineHelpText>
        <label>Trad IH Reagents Quote</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Trad_IH_Label__c</fullName>
        <label>Trad IH</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_Volume_Committed__c</fullName>
        <description>For Canada TM there is a behavioral discount &quot;Committed Volume&quot; for which the user needs to select in this field the range of the Committed Volum</description>
        <inlineHelpText>Please select the range of the Committed Volume</inlineHelpText>
        <label>Canada Volume Committed</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;=80% ot total volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 80% and &lt;= 90%of total volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 90% of total volume</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OCD_Warranty_Exceeds_Standard__c</fullName>
        <formula>NOT(ISNULL( OCD_Max_Warranty_on_Quote__c )) &amp;&amp; NOT(ISNULL(OCD_Standard_Equipment_Warranty__c  )) &amp;&amp; (OCD_Max_Warranty_on_Quote__c &gt; OCD_Standard_Equipment_Warranty__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warranty Exceeds Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCD_Wells_Disc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Wells</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price_Violation_Count__c</fullName>
        <label>Price Violation Count</label>
        <summaryFilterItems>
            <field>REVVY__MnQuoteItem__c.OCD_Price_Violation__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>REVVY__MnQuoteItem__c.REVVY__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>